<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/serverIpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_ip"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/serverIp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/server_ip_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/serverPortText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_port"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/serverPort"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/server_port_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/refreshRateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fresh_rate"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/refreshRate"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/fresh_rate_value"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/scopeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scope"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/scope"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/scope_value" />

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <Button
                android:text="@string/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectButton"
                android:layout_marginRight="8dp" />
            <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetButton"
                android:layout_marginLeft="8dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>