<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/scopeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scope"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/messageScope"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/scope_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/messageTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_type"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/messageType"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/message_type_register" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/messageName"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/name_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/roleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/roleType"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/role_advertiser" />

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/senderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/sender"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/sender_value" />

    </LinearLayout>
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/receiverText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/receiver"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/receiver_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_content"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/messageContent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/message_content_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/addMessageAttrKey"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:hint="@string/attribute_key"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/addMessageAttrValue"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:hint="@string/attribute_value" />
        <Button
            android:id="@+id/addMessageAttrButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attribute_button"
            android:layout_marginLeft="5dp"
             />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <Button
                android:text="Send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgSendButton"
                android:layout_marginRight="8dp" />
            <Button
                android:text="Load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/xmlLoadButton"
                 />
            <Button
                android:text="Clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/msgClearButton"
                android:layout_marginLeft="8dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>